--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,5 +1,4 @@
-<div>
-        some content about this site
-</div>
 
-<!-- <script type="text/javascript" src="about.js"></script> -->
+<div id="divAbout">
+        about galloway tech js site...
+</div>
