--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" type="text/css" href="about.css">
 <div id="divAbout">
-        about galloway tech js site...
+        about galloway tech js site.
 </div>
