--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
     <head>
     <meta charset="UTF-8">
     <title>GallowayTechJsSite</title>
+    <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
-        <script type="text/javascript" src="main.js"></script>
-        <div id="MainBody"></div>
+        <div id="MainBody">
+            <div id="About">
+                replace this...
+            </div>
+        </div>
     </body>
 </html>
