--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
             <div id="About">
                 replace this...
             </div>
+            <div id="Work">
+                    replace this...
+            </div>
+            <div id="Contact">
+                    replace this...
+            </div>
         </div>
     </body>
 </html>
