--- a/src/work/work.html
+++ b/src/work/work.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="work.css">
 <div id="divWork">
-        galloway tech work.
+        galloway tech work history.
 </div>
