--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
             <div id="Contact">
                     replace this...
             </div>
+            <div id="ajaxContent">
+                Get this...
+            </div>
         </div>
     </body>
 </html>
