--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,5 +1,5 @@
-<div id="About">
-        <h2>about galloway tech js site.</h2>
+<div id="About" class="col-sm-12 about-me-blurb">
+        <h3>Hi - I'm Jason.</h3>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
