--- a/src/data/dynamic.html
+++ b/src/data/dynamic.html
@@ -1,4 +1,4 @@
-<div id="ajaxContent">
+<div id="ajaxContent" class="col-sm-12">
     <h2>ajax content.</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
