--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
     <!-- Bootstracp Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <meta charset="UTF-8">
     <title>GallowayTechJsSite</title>
     </head>
     <body>
         <div id="MainBody">
+            <div id="Header">
+                replace this...
+            </div>
             <div id="About">
                 replace this...
             </div>
-            <div id="Work">
+            <div id="Portfolio">
                     replace this...
             </div>
             <div id="Contact">
