--- a/src/work/work.html
+++ b/src/work/work.html
@@ -1,4 +1,4 @@
-<div id="Work">
+<div id="Work" class="col-sm-12">
         <h2>galloway tech work history.</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
