--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -1,4 +1,4 @@
-<div id="Contact">
+<div id="Contact" class="col-sm-12">
         <h2>contact galloway tech.</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
