--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,4 +1,4 @@
-<div id="About" class="col-sm-12 about-me-blurb">
+<div id="About">
         <h3>Hi - I'm Jason.</h3>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
