--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,27 @@
-<!doctype html>
 <html lang="en">
     <head>
-    <!-- Bootstracp Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta charset="UTF-8">
-    <title>GallowayTechJsSite</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>GallowayTechJsSite</title>
+
+        <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+            }
+        }
+        </style>
+        <!-- Custom styles for this template -->
+        <!-- <link href="album.css" rel="stylesheet"> -->
     </head>
     <body>
         <div id="MainBody">
@@ -19,6 +35,9 @@
                     replace this...
             </div>
             <div id="Contact">
+                    replace this...
+            </div>
+            <div id="Album">
                     replace this...
             </div>
             <div id="ajaxContent">
