--- a/src/portfolio/portfolio.html
+++ b/src/portfolio/portfolio.html
@@ -1,13 +1,13 @@
-<section id="portfolio-section" class="portfolio home-section gap">
+<section id="portfolio-section" class="portfolio">
         <div class="container">
-            <div fxLayout='column' class="text-center mb-5">
+            <div fxLayout='column' class="text-center">
                 <div fxFlex.gt-md="60%">
                     <h2 class="title-page">Our Recent Work</h2>
                     <p class="lead w-60"> Consectetur adipisicing elit. Velit id error rem qui. Neque aperiam saepe placeat vero reprehenderit. </p>
                 </div>
             </div>
-            <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutWrap="nowrap" fxLayoutGap="30px">
-                <div fxFlex="33.33">
+            <div class="flex-container">
+                <div>
                     <mat-card class="p-0 m-0">
                         <img mat-card-image src="images/1.jpg">
                         <mat-card-content>
@@ -26,7 +26,7 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
-                <div fxFlex="33.33">
+                <div>
                     <mat-card class="p-0 m-0">
                         <img mat-card-image src="images/2.jpg">
                         <mat-card-content>
@@ -45,7 +45,7 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
-                <div fxFlex="33.33">
+                <div>
                     <mat-card class="p-0 m-0">
                         <img mat-card-image src="images/3.jpg">
                         <mat-card-content>
