--- a/src/header/header.html
+++ b/src/header/header.html
@@ -1,4 +1,65 @@
+<nav class="navbar navbar-expand-lg fixed-top px-5">
+        <a class="navbar-brand" href="http://gallowaytech.com"><i class="fas fa-home"></i> Jason Galloway</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+                <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0"></ul>
+            <ul class="navbar-nav">
+                    <li class="nav-item">
+                            <a class="nav-link" href="https://www.andrewcbancroft.com#pluralsight-courses">Pluralsight Courses</a>
+                    </li>
+
+                <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Topics
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <h6 class="dropdown-header">iOS Development</h6>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#data-persistence">Data Persistence</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#dependency-management">Dependency Management</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#eventkit">Event Kit</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#iap">In-App Purchases</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#parse">Parse</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#patterns-and-practices">Patterns and Practices</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#react-native">React Native</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#swift-how-tos">Swift How-To's</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#swift-language-notes">Swift Language Notes</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#testing">Testing</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#ui-work">User Interface Work</a>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#xcode">Xcode</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#dot-net-development">.Net Development</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#musings">Musings</a>
+                        </div>
+                    </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Connect With Me
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="https://github.com/andrewcbancroft">GitHub</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/andrewcbancroft/">LinkedIn</a>
+                        <a class="dropdown-item" href="https://twitter.com/andrewcbancroft">Twitter</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/channel/UCDPV9kMhP-b5EFRI7d812pg">YouTube</a>
+                        <a class="dropdown-item" href="https://www.pluralsight.com/authors/andrew-bancroft">Pluralsight Courses</a>
+                        <a class="dropdown-item" href="https://dataday.life">www.dataday.life</a>
+                    </div>
+                </li>
+            </ul>
+    </div>
+</nav>
+
 <div id="Header" class="header header-index content-wrapper">
-    <h1>Jason Galloway</h1>
-    <h3 class="site-description">Something clever here...</h3>
+    <div class="site-intro">
+        <div class="grav-inner">
+            <div class="grav-grav">
+                <img src="skydiving.jpg" class="avatar-256 avatar photo grav-hashed">
+                <h1 class="site-title">Jason Galloway</h1>
+                <h3 class="site-description">Something clever here...</h3>
+            </div>
+        </div>
+    </div>
 </div>
