--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         </style>
         <!-- Custom styles for this template -->
         <!-- <link href="album.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
         <div id="MainBody">
