--- a/src/header/header.html
+++ b/src/header/header.html
@@ -7,32 +7,19 @@
         <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
                 <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0"></ul>
             <ul class="navbar-nav">
-                    <li class="nav-item">
-                            <a class="nav-link" href="https://www.andrewcbancroft.com#pluralsight-courses">Pluralsight Courses</a>
-                    </li>
-
                 <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Topics
+                            Menu
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <h6 class="dropdown-header">iOS Development</h6>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#data-persistence">Data Persistence</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#dependency-management">Dependency Management</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#eventkit">Event Kit</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#iap">In-App Purchases</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#parse">Parse</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#patterns-and-practices">Patterns and Practices</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#react-native">React Native</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#swift-how-tos">Swift How-To's</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#swift-language-notes">Swift Language Notes</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#testing">Testing</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#ui-work">User Interface Work</a>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#xcode">Xcode</a>
+                            <a class="dropdown-item" href="#">Patterns and Practices</a>
+                            <a class="dropdown-item" href="#">How-To's</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#dot-net-development">.Net Development</a>
+                            <a class="dropdown-item" href="#">.Net Development</a>
+                            <a class="dropdown-item" href="#">Webpack</a>
+                            <a class="dropdown-item" href="#">Typescript</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://www.andrewcbancroft.com#musings">Musings</a>
+                            <a class="dropdown-item" href="#">Musings</a>
                         </div>
                     </li>
                 <li class="nav-item dropdown">
@@ -40,12 +27,8 @@
                         Connect With Me
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://github.com/andrewcbancroft">GitHub</a>
-                        <a class="dropdown-item" href="https://www.linkedin.com/in/andrewcbancroft/">LinkedIn</a>
-                        <a class="dropdown-item" href="https://twitter.com/andrewcbancroft">Twitter</a>
-                        <a class="dropdown-item" href="https://www.youtube.com/channel/UCDPV9kMhP-b5EFRI7d812pg">YouTube</a>
-                        <a class="dropdown-item" href="https://www.pluralsight.com/authors/andrew-bancroft">Pluralsight Courses</a>
-                        <a class="dropdown-item" href="https://dataday.life">www.dataday.life</a>
+                        <a class="dropdown-item" href="https://github.com/sac80644">GitHub</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/gallowayj/">LinkedIn</a>
                     </div>
                 </li>
             </ul>
