--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,10 +1,9 @@
 <div id="About">
         <h3>Hi - I'm Jason.</h3>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        I love to learn new things and I have found that to retain the new things that I learn, I have to use
+        them...a lot.  And at work I don't get the opportunity to work with a technology that I choose.  I have to work where needed 
+        and so maybe I'll pick up a new skill, use it for a week, then the task is over and I have to move onto something else.  
+        That is how it has been with me and Javascript since we first met in 2006.  So, I have set out to build a new site for myself 
+        composed only of Javascript, front to back.  No Microsoft, no Angular, no React or any frameworks, except that which I design myself.  
+        I'll be checking this site into my <a href="https://github.com/sac80644/GallowayTechJsSite">GitHub</a> account, so check it out.
 </div>
