--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,15 @@
             <div id="Contact">
                     replace this...
             </div>
-            <div id="Album">
+            <div id="AlbumToggle">
+                <div id="Album">
                     replace this...
+                </div>
             </div>
             <div id="ajaxContent">
                 Get this...
             </div>
+            <div id="scripts"></div>
         </div>
     </body>
 </html>
