--- a/src/header/header.html
+++ b/src/header/header.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg fixed-top px-5">
+<nav id="navbar" class="navbar navbar-expand-lg fixed-top px-5">
         <a class="navbar-brand" href="http://gallowaytech.com"><i class="fas fa-home"></i> Jason Galloway</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
@@ -20,6 +20,7 @@
                             <a class="dropdown-item" href="#">Typescript</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Musings</a>
+                            <a class="dropdown-item" href="#">Photo Album</a>
                         </div>
                     </li>
                 <li class="nav-item dropdown">
