main to album navigation

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
-        <div id="MainBody">
+        <div id="Navbar">
+            replace this...
+        </div>
+        <div id="MainBody" class="fade show">
             <div id="Header">
                 replace this...
             </div>
@@ -43,7 +46,7 @@
             </div>
             <div id="scripts"></div>
         </div>
-        <div id="AlbumToggle" class="hide">
+        <div id="AlbumToggle" class="fade" style="display: none;">
             <div id="Album">
                 replace this...
             </div>
