--- a/src/album/album.html
+++ b/src/album/album.html
@@ -1,5 +1,5 @@
 
-<header>
+<!-- <header>
   <div class="bg-dark collapse show" id="navbarHeader" style="">
     <div class="container">
       <div class="row">
@@ -29,7 +29,7 @@
       </button>
     </div>
   </div>
-</header>
+</header> -->
 
 <main role="main">
 
