split out header and nav

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,9 @@
             <div id="Contact">
                     replace this...
             </div>
-            <div id="ajaxContent">
+            <!-- <div id="ajaxContent">
                 Get this...
-            </div>
-            <div id="scripts"></div>
+            </div> -->
         </div>
         <div id="AlbumToggle" class="fade" style="display: none;">
             <div id="Album">
