--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,40 @@
+<!doctype html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>GallowayTechJsSite</title>
-
-        <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-            }
-        }
-        </style>
-        <!-- Custom styles for this template -->
-        <!-- <link href="album.css" rel="stylesheet"> -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
+
     <body>
         <div id="Navbar">
             replace this...
         </div>
-        <div id="MainBody" class="fade show">
-            <div id="Header">
-                replace this...
-            </div>
-            <div id="About">
-                replace this...
-            </div>
-            <div id="Portfolio">
-                    replace this...
-            </div>
-            <div id="Contact">
-                    replace this...
-            </div>
-            <!-- <div id="ajaxContent">
-                Get this...
-            </div> -->
-        </div>
-        <div id="AlbumToggle" class="fade" style="display: none;">
-            <div id="Album">
-                replace this...
-            </div>
-        </div>
+        <main>
+            <div id="MainBody" class="fade show">
+                    <div id="Header">
+                        replace this...
+                    </div>
+                    <div id="About">
+                        replace this...
+                    </div>
+                    <div id="Portfolio">
+                            replace this...
+                    </div>
+                    <div id="Contact">
+                            replace this...
+                    </div>
+                    <!-- <div id="ajaxContent">
+                        Get this...
+                    </div> -->
+                </div>
+                <div id="AlbumToggle" class="fade" style="display: none;">
+                    <div id="Album">
+                        replace this...
+                    </div>
+                </div>
+        </main>
     </body>
+    
 </html>
