--- a/src/header/header.html
+++ b/src/header/header.html
@@ -1,4 +1,4 @@
-<div id="Header" class="header header-index content-wrapper">
+<header id="Header" class="header header-index content-wrapper">
     <div class="site-intro">
         <div class="grav-inner">
             <div class="grav-grav">
@@ -8,4 +8,4 @@
             </div>
         </div>
     </div>
-</div>
+</header>
