--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
         <div id="Navbar">
             replace this...
         </div>
-        <main>
             <div id="MainBody" class="fade show">
                     <div id="Header">
                         replace this...
@@ -19,22 +18,27 @@
                     <div id="About">
                         replace this...
                     </div>
-                    <div id="Portfolio">
+                    <!-- <div id="Portfolio">
                             replace this...
                     </div>
                     <div id="Contact">
                             replace this...
-                    </div>
+                    </div> -->
                     <!-- <div id="ajaxContent">
                         Get this...
                     </div> -->
+                    <div id="Articles">
+                            replace this...
+                    </div>
+                    <div id="Footer">
+                            replace this...
+                    </div>
                 </div>
                 <div id="AlbumToggle" class="fade" style="display: none;">
                     <div id="Album">
                         replace this...
                     </div>
                 </div>
-        </main>
     </body>
     
 </html>
