--- a/src/navbar/navbar.html
+++ b/src/navbar/navbar.html
@@ -14,7 +14,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a id="Home" class="dropdown-item" href="#">Home</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Patterns and Practices</a>
+                        <a class="dropdown-item" href="#patterns">Patterns and Practices</a>
                         <a class="dropdown-item" href="#">How-To's</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">.Net Development</a>
@@ -30,8 +30,8 @@
                     Connect With Me
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="https://github.com/sac80644">GitHub</a>
-                    <a class="dropdown-item" href="https://www.linkedin.com/in/gallowayj/">LinkedIn</a>
+                    <a class="dropdown-item" href="https://github.com/sac80644" target="_blank">GitHub</a>
+                    <a class="dropdown-item" href="https://www.linkedin.com/in/gallowayj/" target="_blank">LinkedIn</a>
                 </div>
             </li>
         </ul>
