--- a/src/navbar/navbar.html
+++ b/src/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav id="navbar" class="navbar navbar-expand-lg fixed-top px-5">
-    <a class="navbar-brand" href="http://gallowaytech.com"><i class="fas fa-home"></i> Jason Galloway</a>
+    <a id="NavHome" class="navbar-brand" href="#"><i class="fas fa-home"></i> Jason Galloway</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,13 +15,13 @@
                         <a id="Home" class="dropdown-item" href="#">Home</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#patterns">Patterns and Practices</a>
-                        <a class="dropdown-item" href="#">How-To's</a>
+                        <a class="dropdown-item" href="#how-to">How-To's</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">.Net Development</a>
-                        <a class="dropdown-item" href="#">Webpack</a>
-                        <a class="dropdown-item" href="#">Typescript</a>
+                        <a class="dropdown-item" href="#dot-net-development">.Net Development</a>
+                        <a class="dropdown-item" href="#typescript-development">Typescript</a>
+                        <a class="dropdown-item" href="#webpack-development">Webpack</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Musings</a>
+                        <a class="dropdown-item" href="#misc">Miscellaneous</a>
                         <a id="PhotoAlbum" class="dropdown-item" href="#">Photo Album</a>
                     </div>
                 </li>
