--- a/src/content/what_patterns.html
+++ b/src/content/what_patterns.html
@@ -1,4 +1,4 @@
-<div id="what-patterns" class="container">
+<div id="ArticleContent" class="container">
     <div class="row">
         <div class="col-sm-12">
             <article>
