--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,9 @@
                     </div>
                     <!-- <div id="Portfolio">
                             replace this...
-                    </div>
-                    <div id="Contact">
-                            replace this...
                     </div> -->
-                    <!-- <div id="ajaxContent">
-                        Get this...
+                    <!-- <div id="Contact">
+                            replace this...
                     </div> -->
                     <div id="Articles">
                             replace this...
