better menu handling with events

--- a/src/content/favorite_patterns.html
+++ b/src/content/favorite_patterns.html
@@ -1,4 +1,4 @@
-<div id="ArticleContent" class="container">
+<div id="favorite-patterns" class="container">
     <div class="row">
         <div class="col-sm-12">
             <article>
