better fade in fade out

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div id="Navbar">
             replace this...
         </div>
-            <div id="MainBody" class="fade show">
+            <div id="MainBody">
                     <div id="Header">
                         replace this...
                     </div>
@@ -29,7 +29,7 @@
                             replace this...
                     </div>
                 </div>
-                <div id="AlbumToggle" class="fade" style="display: none;">
+                <div id="AlbumToggle" style="display: none;">
                     <div id="Album">
                         replace this...
                     </div>
