--- a/src/header/header.html
+++ b/src/header/header.html
@@ -1,4 +1,4 @@
-<header id="Header" class="header header-index content-wrapper">
+<header id="Header" class="header content-wrapper">
     <div class="site-intro">
         <div class="grav-inner">
             <div class="grav-grav">
