--- a/src/content/patterns.html
+++ b/src/content/patterns.html
@@ -13,7 +13,7 @@
                             wife was inside busily knitting.  Oh, sorry hon, I meant crocheting.</p>
                             <h3>Crocheting</h3>
                         <p>Anyways, my wife told me how much she like the repetitive patterns used in her crocheting.  Seeing a completed, or 
-                            even partially completed piece of work, a light bulb when off in my mind.  I mean, I understood patterns, but now 
+                            even partially completed piece of work, a light bulb when off in my head.  I mean, I understood patterns, but now 
                             I could really see them.  Each square of a quilt, all following the same pattern, then connected together to make a 
                             whole.  I already knew that I used patterns all the time, I just did not realize that someone had written a book
                             and gave them names.
