webpack demo article

--- a/src/content/development.html
+++ b/src/content/development.html
@@ -216,13 +216,20 @@
                 <div class="article">
                     <h1>Webpack - Setting up Hot Module Replacement</h1>
                     <div class="content">
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p> 
+                            So I have gone from enjoying, to being frustrated and back to 
+                            enjoying using Webpack.  It can do a lot but is difficult to 
+                            get completely set up.  Luckily for me the project I am on 
+                            during the day already has it up and running.  The one thing 
+                            that I really wanted to see was Hot Module Replacement, and that 
+                            would prove to be difficult.
+                            <br />
+                            Feel free to come back and I will have the next part of this post 
+                            completed, but in the meantime here is a super simple project that 
+                            shows how to set up Webpack with Hot Module Replacement, along 
+                            with some other things: 
+                            <a href="https://github.com/sac80644/webpack-demo" target="_blank">GitHub</a>
+                        </p>
                             <h3>HMR Versus Live Reloading</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
