--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,28 @@
 
     <body>
         <div id="Navbar">
-            replace this...
+            loading...
         </div>
             <div id="MainBody">
                 <div id="Header">
-                    replace this...
+                    loading...
                 </div>
                 <div id="About">
-                    replace this...
+                    loading...
                 </div>
                 <!-- <div id="Portfolio">
-                        replace this...
+                        loading...
                 </div> -->
                 <div id="Articles">
-                        replace this...
+                        loading...
                 </div>
                 <div id="Footer">
-                        replace this...
+                        loading...
                 </div>
             </div>
             <div id="AlbumToggle" style="display: none;">
                 <div id="Album">
-                    replace this...
+                    loading...
                 </div>
             </div>
     </body>
