--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,7 +1,7 @@
 <div id="About">
         <h3>Hi - I'm Jason.</h3>
         I love to learn new things and I have found that to retain the new things that I learn, I have to use
-        them...a lot.  And usually at work I don't get the opportunity to work with a technology that I choose.  I have to work where needed 
+        them...a lot.  And usually at the office I don't get the opportunity to work with a technology that I choose.  I have to work where needed 
         and so maybe I'll pick up a new skill, use it for a week, then the task is over and I have to move onto something else.  
         That is how it has been with me and Javascript since we first met in 2006.  So, I have set out to build a new site for myself 
         composed only of Javascript, front to back.  No Microsoft, no .Net, no Angular, no React nor any frameworks, except that which I design myself.  
