--- a/src/content/recent.html
+++ b/src/content/recent.html
@@ -89,16 +89,17 @@
                             <br />
                             Since we are not currently performing any commands, just queries, I have not been able to 
                             fully see the pros and cons of this approach.  But for what we have done so far I think the part 
-                            I like the most is that as a developer I get to write more of my owne code.  Instead of 
+                            I like the most is that as a developer I get to write more of my own code.  Instead of 
                             using building blocks that someone else wrote to cobble together a new feature, I get 
                             to make more decisions and contribute more.  This is a WET vs. DRY approach and it takes some getting used to. 
                             There is a tendency to make every component from a feature module a generic shared 
                             component.  We are early on in this development effort and I can already see some components 
-                            growing too complext, but we will figure that out soon enough.
+                            growing too complex, but we will figure that out soon enough.
                             <br />
                             <br />
-                            In short, I recommend at least watching a presentation, reading about Verticle Slices on 
-                            Jimmy's site or another's.  In his demo he uses <a href="https://github.com/jbogard/MediatR" target="_blank">MediatR</a>. 
+                            In short, I recommend at least watching a presentation or reading about Verticle Slices on 
+                            Jimmy's site.  It has been around for a while so there are plenty of opinions out 
+                            there as well.  In his demo he uses <a href="https://github.com/jbogard/MediatR" target="_blank">MediatR</a>. 
                             Read up on that too.  It is not complex, it is very simple and liberating.
                         </p>
                             <h3>Verticle Slices Links</h3>
