--- a/src/navbar/navbar.html
+++ b/src/navbar/navbar.html
@@ -14,15 +14,15 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a id="menu-home" class="dropdown-item" href="#">Home</a>
                         <div class="dropdown-divider"></div>
+                        <a id="menu-recent-work" class="dropdown-item" href="#recent-work">Recent Work</a>
                         <a id="menu-patterns" class="dropdown-item" href="#patterns">Patterns and Practices</a>
-                        <a id="menu-how-to" class="dropdown-item" href="#how-to">How-To's</a>
                         <div class="dropdown-divider"></div>
                         <a id="menu-dot-net-development"" class="dropdown-item" href="#dot-net-development">.Net Development</a>
                         <a id="menu-typescript-development" class="dropdown-item" href="#typescript-development">Typescript</a>
                         <a id="menu-webpack-development" class="dropdown-item" href="#webpack-development">Webpack</a>
                         <div class="dropdown-divider"></div>
                         <a id="menu-misc" class="dropdown-item" href="#misc">Miscellaneous</a>
-                        <a id="menu-photo-album" class="dropdown-item" href="#">Photo Album</a>
+                        <a id="menu-photo-album" class="dropdown-item disabled" href="#">Photo Album</a>
                     </div>
                 </li>
             <li class="nav-item dropdown">
